# prior_elicitation

./: .all-contributorsrc  .buildinfo  .gitignore  .lycheeignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.txt  README.md  airflow.cfg  genindex.html  global_dict.pkl  index.html  introductory_example.html  logs.json  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  references.html  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  introductory_example.doctree  quickstart.doctree  references.doctree
.doctrees/api/: elicit.configs.doctree  elicit.core.doctree  elicit.core.input.doctree  elicit.core.run.doctree  elicit.core.write_results.doctree  elicit.doctree  elicit.elicit.doctree  elicit.elicitation_techniques.doctree  elicit.expert_data.doctree  elicit.extras.doctree  elicit.extras.utils.doctree  elicit.functions.doctree  elicit.functions.helper_functions.doctree  elicit.functions.loss_computation.doctree  elicit.functions.loss_functions.doctree  elicit.functions.model_simulation.doctree  elicit.functions.prior_simulation.doctree  elicit.functions.targets_elicits_computation.doctree  elicit.functions.training.doctree  elicit.helper_functions.doctree  elicit.initialization.doctree  elicit.initialization_methods.doctree  elicit.input_functions.doctree  elicit.logs_config.doctree  elicit.loss_computation.doctree  elicit.loss_functions.doctree  elicit.losses.doctree  elicit.main.doctree  elicit.model_simulation.doctree  elicit.networks.doctree  elicit.optimization.doctree  elicit.optimization_process.doctree  elicit.plots.doctree  elicit.prior_elicitation.doctree  elicit.prior_simulation.doctree  elicit.save_config.doctree  elicit.simulations.doctree  elicit.target_quantities.doctree  elicit.targets.doctree  elicit.user.custom_functions.doctree  (+5 more)
.doctrees/explanation/: MMD.doctree  index.doctree  prior_elicitation.doctree
.doctrees/howto/: Untitled.doctree  discrete_rv.doctree  expert_data.doctree  generative_model.doctree  index.doctree  initialization.doctree  saving_loading.doctree  target_quantities.doctree
.doctrees/notebooks/: binomial_independent.doctree  binomial_joint.doctree
.doctrees/tutorials/: binomial_independent.doctree  binomial_joint.doctree  index.doctree  toymodel_deep.doctree  toymodel_deep2.doctree  toymodel_parametric-parallel.doctree  toymodel_parametric.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: badges.yaml  docs.yaml  links.yaml  linting.yaml  tests.yaml
_modules/: index.html
_sources/: index.rst  introductory_example.rst  quickstart.ipynb  references.rst
api/: elicit.configs.html  elicit.core.html  elicit.core.input.html  elicit.core.run.html  elicit.core.write_results.html  elicit.elicit.html  elicit.elicitation_techniques.html  elicit.expert_data.html  elicit.extras.html  elicit.extras.utils.html  elicit.functions.helper_functions.html  elicit.functions.html  elicit.functions.loss_computation.html  elicit.functions.loss_functions.html  elicit.functions.model_simulation.html  elicit.functions.prior_simulation.html  elicit.functions.targets_elicits_computation.html  elicit.functions.training.html  elicit.helper_functions.html  elicit.html  elicit.initialization.html  elicit.initialization_methods.html  elicit.input_functions.html  elicit.logs_config.html  elicit.loss_computation.html  elicit.loss_functions.html  elicit.losses.html  elicit.main.html  elicit.model_simulation.html  elicit.networks.html  elicit.optimization.html  elicit.optimization_process.html  elicit.plots.html  elicit.prior_elicitation.html  elicit.prior_simulation.html  elicit.save_config.html  elicit.simulations.html  elicit.target_quantities.html  elicit.targets.html  elicit.user.custom_functions.html  (+5 more)
docs/: Makefile
elicit/: __init__.py  configs.py  docstring_overview.config  elicit.py  elicitation_techniques.py  expert_data.py  helper_functions.py  helpers.py  initialization.py  initialization_methods.py  input_functions.py  logs.json  logs_config.py  loss_computation.py  loss_functions.py  losses.py  main.py  model_simulation.py  networks.py  optimization.py  optimization_process.py  plots.py  prior_elicitation.py  prior_simulation.py  requirements.txt  save_config.py  simulations.py  target_quantities.py  targets.py  utils.py
explanation/: MMD.html  index.html  prior_elicitation.html
howto/: Untitled.html  discrete_rv.html  expert_data.html  generative_model.html  index.html  initialization.html  saving_loading.html  target_quantities.html
notebooks/: binomial_independent.html  binomial_joint.html
prior_elicitation/: configuration_global.py  configuration_models.py  elicitation_techniques.py  helper_functions.py  loss_components.py  losses.py  main.py  models.py  plot_diagnostics.py  plot_results.py  trainer.py  trainer_step.py
results/: init_hyperparameters.pkl  init_prior.pkl  prior_samples.pkl
tests/: test_expert_data.py  test_initialization.py  test_prior_simulation.py  test_simulations.py  test_targets.py  utils.py
tutorials/: binomial_independent.html  binomial_joint.html  index.html  toymodel_deep.html  toymodel_deep2.html  toymodel_parametric-parallel.html  toymodel_parametric.html
(+1200 files in other folders)
