[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "elicit" 
version = "0.0.1"
description = "Tool for learning prior distributions based on expert prior knowledge elicitation"
license = "Apache-2.0"
authors = [
    "Florence Bockting",
	"Stefan T. Radev",
	"Paul-Christian Bürkner"
]
maintainers = [
    "Florence Bockting",
]
packages = [
	{ include = "elicit" }
]

[tool.poetry.dependencies]
#"tensorflow[and-cuda]" = "*"# "2.14"
tensorflow = "2.14"
tensorflow-probability = "0.22.1"
pandas = "^2.2.2"
signac = "^2.2.0"
numpy = "^1.22,<=1.24.3"
patsy = "^0.5.6"
bayesflow = "*" #{ git = "https://github.com/stefanradev93/BayesFlow.git", branch = "dev" }
configs = "^3.0.3"
python = "^3.9,<3.12"
pyarrow = "16.1.0"
sphinx-pyproject = "0.3.0"
sphinx = "7.3.7"
sphinx-book-theme = "1.1.2"
numpydoc = "1.7.0"
myst_nb = "1.1.0"
sphinx_design = "0.6.0"
#sphinxemoji = "0.3.1"
genbadge = "*"
defusedxml = "*"
python-json-logger = "2.0.7"

[tool.poetry.group.test.dependencies]  
pytest-randomly = "^3.15.0"  
pytest = "^8.2.0" 

[tool.poetry.group.dev.dependencies]  
pytest = "^8.3.3"  
coverage = "^7.6.1"  

[tool.coverage.run]  
branch = true  
source = ["tests"]  
dynamic_context = "test_function"  
  
[tool.coverage.report]  
show_missing = true  
fail_under = 0  

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

	