[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "elicits" 
version = "0.0.2"
description = "Tool for learning prior distributions based on expert prior knowledge elicitation"
license = "Apache-2.0"
authors = [
    "Florence Bockting",
	"Stefan T. Radev",
	"Paul-Christian Bürkner"
]
maintainers = [
    "Florence Bockting",
]
packages = [
	{ include = "elicit" }
]

[tool.poetry.dependencies]
python = "3.11.9"
configs = "3.0.3"
numpy = "1.24.3"
pandas = "2.2.3"
pyarrow = "16.1.0"
signac = "2.2.0"
tensorflow = "2.14"
tensorflow-probability = "0.22.1"
tensorflow-io-gcs-filesystem = "0.31.0"
bayesflow = "1.1.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-pyproject = "0.3.0"
sphinx = "7.3.7"
sphinx-book-theme = "1.1.2"
numpydoc = "1.7.0"
myst_nb = "1.1.0"
sphinx_design = "0.6.0"
sphinxemoji = "0.3.1"
defusedxml = "0.7.1"
python-json-logger = "2.0.7"

[tool.poetry.group.test.dependencies]  
pytest-randomly = "^3.15.0"  
pytest = "^8.2.0" 

[tool.poetry.group.dev.dependencies]  
pytest = "^8.3.3"  
coverage = "^7.6.1"  

[tool.coverage.run]  
branch = true  
source = ["tests"]  
dynamic_context = "test_function"  
  
[tool.coverage.report]  
show_missing = true  
fail_under = 0  

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "test_reports/coverage/coverage.xml"

	